module8/deploy/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: gohttpserver
spec:
  selector:
    app: gohttpserver
  ports:
  - port: 80
    name: serverport
    protocol: TCP
    targetPort: 80
  type: ClusterIP
