module8/deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gohttpserver
  labels:
    name: gohttpserver
spec:
  rules:
  - host: cncamp.com
    http:
      paths:
      - backend:
          service:
            name: gohttpserver
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - cncamp.com
    secretName: cncamp-tls
